--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-	  "start": "node index.js"
+		"start": "node index.js"
 	},
 	"dependencies": {
-	  "express": "^4.21.2",
-	  "cors": "^2.8.5",
-	  "mongoose": "^7.6.3",
-	  "dotenv": "^16.0.3",
-	  "uuid": "^9.0.0"
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.21.2",
+		"lowdb": "^7.0.1",
+		"mongoose": "^7.6.3",
+		"uuid": "^9.0.0"
 	}
-  }
-  
+}
